Salesforce/main/default/main/default/objects/Natureza_da_Opera_o__mdt/fields/Codigo_de__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de__c</fullName>
    <label>Código</label>
    <length>4</length>
    <type>Text</type>
</CustomField>