Salesforce/main/default/main/default/objects/Natureza_da_Opera_o__mdt/fields/Natureza_da_opera_o__c.field-meta.xml
<CustomField>
    <fullName>Natureza_da_opera_o__c</fullName>
    <label>Natureza da operação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>