Salesforce/main/default/main/default/objects/Natureza_da_Opera_o__mdt/fields/Valido__c.field-meta.xml
<CustomField>
    <fullName>Valido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Válido</label>
    <type>Checkbox</type>
</CustomField>